objects/AA_Parts__c.object
<CustomObject>
    <fields>
        <fullName>AA_Contact_Number__c</fullName>
        <label>AA Contact Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>MunchingField__c</fullName>
        <label>MunchingField</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PicklistField__c</fullName>
        <label>PicklistField</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>One Value</fullName>
                </value>
                <value>
                    <fullName>Two</fullName>
                </value>
                <value>
                    <fullName>Three</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source_of_the_Lead__c</fullName>
        <label>Source of the Lead</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>AA Parts</label>
    <nameField>
        <label>AA Parts Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AA Parts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>